--- a/src/component/terminal.css
+++ b/src/component/terminal.css
@@ -24,6 +24,7 @@
   font-size: 1.2rem;
   font-weight: 600;
   color: var(--text);
+  flex-shrink: 0;
 }
 
 .header-action {
@@ -65,7 +66,7 @@
 
 .output a {
   text-decoration: none;
-  color: var(--text)
+  color: var(--text);
 }
 
 .output-folder {
